2006-03-11 Added subprocess module from python-2.4 - DSD

2006-03-11 Fixed landscape orientation support with the usetex
           option. The backend_ps print_figure method was 
           getting complicated, I added a _print_figure_tex
           method to maintain some degree of sanity - DSD

2006-03-11 Added "papertype" savefig kwarg for setting 
           postscript papersizes. papertype and ps.papersize
           rc setting can also be set to "auto" to autoscale
           pagesizes - DSD

2006-03-09 Apply P-J's patch to make pstoeps work on windows
           patch report # 1445612 - DSD

2006-03-09 Make backend rc paramter case-insensitive - DSD

2006-03-07 Fixed bug in backend_ps related to C0-C6 papersizes,
           which were causing problems with postscript viewers.
           Supported page sizes include letter, legal, ledger, 
           executive, A0-A10, and B0-B10 - DSD

===============================================================
2006-03-07 Released 0.87.1

2006-03-04 backend_cairo.py:
           fix get_rgb() bug reported by Keith Briggs.
           Require pycairo 1.0.2.
           Support saving png to file-like objects. - SC

2006-03-03 Fixed pcolor handling of vmin, vmax - EF

2006-03-02 improve page sizing with usetex with the latex
           geometry package. Closes bug # 1441629 - DSD

2006-03-02 Fixed dpi problem with usetex png output. Accepted a
           modified version of patch # 1441809 - DSD

2006-03-01 Fixed axis('scaled') to deal with case xmax < xmin - JSWHIT

2006-03-01 Added reversed colormaps (with '_r' appended to name) - JSWHIT

2006-02-27 Improved eps bounding boxes with usetex - DSD

2006-02-27 Test svn commit, again!

2006-02-27 Fixed two dependency checking bugs related to usetex
           on Windows - DSD

2006-02-27 Made the rc deprecation warnings a little more human
           readable.

2006-02-26 Update the previous gtk.main_quit() bug fix to use gtk.main_level()
           - SC
